--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,11 +4,41 @@
     box-sizing: border-box;
 }
 
-img {
+body {
+    background: linear-gradient(to right, #000000 0%, #111111 50%, #222222 100%);
+    overflow: hidden;
+}
+
+img:not([id*='img']) {
     max-width: 100%;
     height: 200px;
 }
 
 .ms_head_width {
     width: 40%;
+}
+
+img[id*='img'] {
+    position: absolute;
+    width: 200px;
+}
+
+#img-1 {
+    top: 10px;
+    left: 0;
+}
+
+#img-2 {
+    bottom: 10px;
+    left: 0;
+}
+
+#img-3 {
+    top: 10px;
+    right: 0;
+}
+
+#img-4 {
+    bottom: 10px;
+    right: 0;
 }
